<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Recuperar"
    android:background="@color/Fondo">

    <TextView
        android:id="@+id/reestablecerContraTexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restablecer_contrase_a"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="28sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.134" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="178dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reestablecerContraTexto"
        app:layout_constraintVertical_bias="0.115"
        app:srcCompat="@drawable/usuario"
        tools:ignore="ContentDescription" />


    <TextView
        android:id="@+id/textView27"
        android:layout_width="287dp"
        android:layout_height="wrap_content"
        android:text="@string/ingresa_tu_correo_electr_nico_para_recibir_un_enlace_y_recuperar_tu_cuenta"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.129" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancelar"
        android:layout_width="122dp"
        android:layout_height="48dp"
        android:background="@drawable/rounded_corner_naranja"
        android:text="@string/cancelar"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.196"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correoCampoRecuperar"
        app:layout_constraintVertical_bias="0.25" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/enviar"
        android:layout_width="122dp"
        android:layout_height="48dp"
        android:background="@drawable/rounded_corner_naranja"
        android:text="@string/enviar"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.817"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correoCampoRecuperar"
        app:layout_constraintVertical_bias="0.25" />

    <EditText
        android:id="@+id/correoCampoRecuperar"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:autofillHints="Ingresa tu correo"
        android:background="@drawable/roundededittext"
        android:backgroundTint="@color/CuadrosTexto"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView27"
        app:layout_constraintVertical_bias="0.05"
        tools:ignore="RtlSymmetry,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/no_te_quedes_por_fuera"
        android:textSize="18sp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView18" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reenviarCodigo"
        android:layout_width="155dp"
        android:layout_height="48dp"
        android:background="@drawable/rounded_corner_naranja"
        android:text="@string/reenviar_codigo"
        android:textColor="#000000"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textReenviar"
        app:layout_constraintVertical_bias="0.22" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:clickable="true"
        android:contentDescription="@string/atras"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_24"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textReenviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/no_recibiste_nada"
        android:textSize="18sp"
        android:visibility="invisible"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enviar" />
</androidx.constraintlayout.widget.ConstraintLayout>