<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".IniciarSesion"
        android:background="@color/Fondo">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inicio_de_sesi_n"
            android:textColor="#000000"
            android:textSize="32sp"
            android:textStyle="italic|bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.07" />

        <TextView
            android:id="@+id/iniciarsesioninst"
            android:layout_width="286dp"
            android:layout_height="45dp"
            android:gravity="center"
            android:text="@string/inicia_sesion_con_tu_cuenta_de_frugal_feast"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView20"
            app:layout_constraintVertical_bias="0.1" />

        <EditText
            android:id="@+id/usuarioOcorreo"
            android:layout_width="286dp"
            android:layout_height="48dp"
            android:autofillHints=""
            android:background="@drawable/roundededittext"
            android:backgroundTint="@color/CuadrosTexto"
            android:ems="10"
            android:inputType="text"
            android:paddingStart="12dp"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usuario_o_correo_label"
            app:layout_constraintVertical_bias="0.033"
            tools:ignore="LabelFor,RtlSymmetry,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/usuario_o_correo_label"
            android:layout_width="191dp"
            android:layout_height="23dp"
            android:autofillHints=""
            android:importantForAutofill="no"
            android:text="@string/correo_electronico"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.286"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iniciarsesioninst"
            app:layout_constraintVertical_bias="0.093" />

        <EditText
            android:id="@+id/contraseñaCampoInicio"
            android:layout_width="286dp"
            android:layout_height="48dp"
            android:background="@drawable/roundededittext"
            android:backgroundTint="@color/CuadrosTexto"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingStart="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contraseñaLabelInicio"
            app:layout_constraintVertical_bias="0.04"
            tools:ignore="Autofill,LabelFor,RtlSymmetry,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/contraseñaLabelInicio"
            android:layout_width="145dp"
            android:layout_height="27dp"
            android:text="@string/contrase_a"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.238"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usuarioOcorreo"
            app:layout_constraintVertical_bias="0.045" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/iniciarsesion1"
            android:layout_width="207dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_corner_naranja"
            android:text="@string/iniciar_sesion"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contraseñaCampoInicio"
            app:layout_constraintVertical_bias="0.17" />

        <TextView
            android:id="@+id/sinCuentaInicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/no_tienes_cuenta_registrate"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iniciarsesion1"
            app:layout_constraintVertical_bias="0.125"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/recuperarCuentaInicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/olvidaste_tu_contrase_a_recuperar_cuenta"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sinCuentaInicio"
            app:layout_constraintVertical_bias="0.466"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/imageView20"
            android:layout_width="204dp"
            android:layout_height="204dp"
            android:layout_marginTop="44dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/blend0502250934281" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>